Ajustando Pagina de contatos

--- a/contato.html
+++ b/contato.html
@@ -47,13 +47,12 @@
 		</figure>
 		<div class="container">
 			<p>
-				<b>Você já parou para pensar qual é o segredo de alguns empresas campeãs de acesso? Pois saiba que a explicação pode ser
-					mais simples do que você imagina e que os bons resultados e grandes números de acesso deles não acontecem por acaso.
+				<b>Não há nada melhor para um consumidor do que ter suas necessidades supridas de forma satisfatória.
 				</b>
 			</p>
 			<h3>
 				<b>
-					<p> Uma ótima infra-estrutura na nuvem é que oferecemos para nossos clientes.</p>
+					<p> É por isso que garantimos a qualidade do nosso atendimento ao cliente.</p>
 				</b>
 			</h3>
 
@@ -67,87 +66,19 @@
 	<section class="main">
 		<div class="container">
 
-			<img class="alignright" src="img/payment.png">
+		
 
 
-			<h2>Qualquer um pode migrar seus dados para nuvem?</h2>
+			<h2>Dúvidas ? </h2>
 
-			<p>Em tese qualquer um pode tornar sua empresa mais acessíveis e segura ao mesmo tempo. A nuvem permite que as empresas aumentem
-				e diminuam seus recursos operacionais, como memória e espaço em disco, quando quiserem, pagando somente o que for usado.</p>
-
-		</div>
-	</section>
-
-
-	<section class="main style2">
-		<div class="container">
-
-			<ul class="lista">
-
-				<li>
-					<img src="img/logo_google.png" height="120" width="120"> </li>
-				<li>
-					<img src="img/logo_bing.png" height="120" width="269"> </li>
-				<li>
-					<img src="img/logo_yahoo.png" height="120" width="120"> </li>
-				<li>
-					<img src="img/logo_uol.png" height="120" width="150"> </li>
-
-
-			</ul>
-
-
-
-			<h2>Nossos parceiros</h2>
-
-			<p>Ninguém chega lá sozinho.Por isso, temos parceiros que compartilham conosco o sonho de ter um Brasil mais justo e avançado.</p>
-			<p>Sonhamos grande, por isso oferecemos apoio estratégico, técnico e financeiro a mais de 50 organizações de grande impacto
-				que compartilham este sonho conosco. Abaixo, conheça os nossos parceiros apoiados.
+			<p>Entre em contato conosco.</p>
+			<p>Telefone: (19)1234-5678
+			</br>
+			Email: nuvem@nuvem.com
 			</p>
 
 		</div>
 	</section>
-
-
-
-	<section class="main">
-		<div class="container">
-
-
-			<center>
-				<h2>Projetado para os requisitos mais rigorosos</h2>
-			</center>
-
-
-			<center>
-				<ul class="lista">
-
-					<li>
-						<img src="img/cloud.png">
-						<p>Segurança</p>
-					</li>
-					<li>
-						<img src="img/pc.png">
-						<p>Conformidade</p>
-					</li>
-
-					<li>
-						<img src="img/cloud2.png">
-						<p>Híbrido</p>
-					</li>
-
-
-				</ul>
-			</center>
-
-
-
-		</div>
-	</section>
-
-
-
-
 
 
 	<footer>
