--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</figure>
 		<div class="container">
 			<p>
-				<b>Você já parou para pensar qual é o segredo de alguns empresas campeãs de acesso? Pois saiba que a explicação pode ser
+				<b>Você já parou para pensar qual é o segredo de algumas empresas campeãs de vendas? Pois saiba que a explicação pode ser
 					mais simples do que você imagina e que os bons resultados e grandes números de acesso deles não acontecem por acaso.
 				</b>
 			</p>
@@ -102,7 +102,7 @@
 
 			<p>Ninguém chega lá sozinho.Por isso, temos parceiros que compartilham conosco o sonho de ter um Brasil mais justo e avançado.</p>
 			<p>Sonhamos grande, por isso oferecemos apoio estratégico, técnico e financeiro a mais de 50 organizações de grande impacto
-				que compartilham este sonho conosco. Abaixo, conheça os nossos parceiros apoiados.
+				que compartilham este sonho conosco.
 			</p>
 
 		</div>
